# baobab_geek_interpreter

./: CHANGELOG.md  README.md  pyproject.toml
docs/: dev_automate_detail.md  dev_constraints.md  dev_diary.md  dev_phases.md  specifications.md
docs/tests/coverage/: coverage.json
examples/: advanced_usage.py  basic_usage.py  custom_services.py  error_handling.py
src/baobab_geek_interpreter/: __init__.py  interpreter.py
src/baobab_geek_interpreter/exceptions/: __init__.py  base_exception.py  execution_exception.py  lexical_exception.py  semantic_exception.py  syntax_exception.py
src/baobab_geek_interpreter/execution/: __init__.py  executor.py  service_decorator.py
src/baobab_geek_interpreter/lexical/: __init__.py  lexical_analyzer.py  token.py  token_type.py
src/baobab_geek_interpreter/lexical/automaton/: __init__.py  automaton.py  state.py  transition.py
src/baobab_geek_interpreter/semantic/: __init__.py  semantic_analyzer.py  symbol_table.py  type_checker.py
src/baobab_geek_interpreter/syntax/: __init__.py  ast_node.py  syntax_analyzer.py
tests/test_baobab_geek_interpreter/: __init__.py  test_interpreter.py
tests/test_baobab_geek_interpreter/exceptions/: __init__.py  test_base_exception.py  test_execution_exception.py  test_lexical_exception.py  test_semantic_exception.py  test_syntax_exception.py
tests/test_baobab_geek_interpreter/execution/: __init__.py  test_executor.py  test_executor_integration.py  test_service_decorator.py
tests/test_baobab_geek_interpreter/integration/: __init__.py  test_full_interpreter.py
tests/test_baobab_geek_interpreter/lexical/: __init__.py  test_lexical_analyzer.py  test_lexical_analyzer_integration.py  test_token.py  test_token_type.py
tests/test_baobab_geek_interpreter/lexical/automaton/: __init__.py  test_automaton.py  test_automaton_integration.py  test_state.py  test_transition.py
tests/test_baobab_geek_interpreter/semantic/: __init__.py  test_semantic_analyzer.py  test_semantic_analyzer_integration.py  test_symbol_table.py  test_type_checker.py
tests/test_baobab_geek_interpreter/syntax/: __init__.py  test_ast_node.py  test_syntax_analyzer.py  test_syntax_analyzer_integration.py
tests/unit/exceptions/: test_execution_exception.py  test_lexical_exception.py  test_semantic_exception.py  test_syntax_exception.py
