[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baobab-geek-interpreter"
version = "0.1.0"
description = "Interpreteur pour le langage 'geek'."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "coverage>=7.0.0,<8.0.0",
    "black>=23.0.0,<24.0.0",
    "pylint>=3.0.0,<4.0.0",
    "mypy>=1.0.0,<2.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-pyproject>=1.1.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--cov=src/baobab_geek_interpreter",
    "--cov-report=term-missing",
    "--cov-report=html:docs/tests/coverage/htmlcov",
    "--cov-report=xml:docs/tests/coverage/coverage.xml",
    "--cov-report=json:docs/tests/coverage/coverage.json",
    # Seuil ajusté à 88% (objectif: 90%)
    "--cov-fail-under=88",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-many-arguments",
    "too-many-positional-arguments",
    "import-outside-toplevel",
    "no-else-return",
    "too-few-public-methods",
    "duplicate-code",
    "unnecessary-pass",
    "useless-parent-delegation",
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
per-file-ignores = ["__init__.py:F401"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
data_file = "docs/tests/coverage/.coverage"
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "docs/tests/coverage/htmlcov"

[tool.coverage.xml]
output = "docs/tests/coverage/coverage.xml"

[tool.coverage.json]
output = "docs/tests/coverage/coverage.json"
